--- a/public/index.html
+++ b/public/index.html
@@ -49,92 +49,82 @@
       </nav>
     </header>
     <main>
-      <article>
+      <section id="player">
+        <video src="api/title/1/anibel/1.webm" poster="temp.jpg" height="256px"></video>
+      </section>
+      <section id="poster">
         <img src="api/title/1/poster-art.jpeg" alt="Постэр" height="512px" />
-        <section>
-          <h1>Невераемныя прыгоды ДжоДжо: Прывідная кроў</h1>
+      </section>
+      <section id="status">
+        <header>Выйшла</header>
+        <main>06.10.2012-06.04.2013</main>
+      </section>
+      <section id="studio">
+        <a href=""><img src="api/David.svg" alt="" /></a>
+      </section>
+      <section>
+        <dt>Тып</dt>
+        <dd>Анімэ/25</dd>
+        <dt>Частак</dt>
+        <dd>26</dd>
+        <dt>Працягласць часткі</dt>
+        <dd>24 хв.</dd>
+        <dt>Жанры</dt>
+        <dd>
+          <ul>
+            <li>Сёнан</li>
+            <li>Экшан</li>
+            <li>Прыгоды</li>
+            <li>Звышнатуральнае</li>
+            <li>Вампіры</li>
+          </ul>
+        </dd>
+        <dt>Узрост</dt>
+        <dd>
+          <abbr
+            title="Асобы, якія не дасягнулі 17-гадовага ўзросту, дапускаюцца на фільм толькі ў суправаджэнні аднаго з бацькоў, альбо законнага прадстаўніка"
+            >R-17</abbr
+          >
+        </dd>
+        <dt>У каталогах</dt>
+        <dd>
           <dl>
-            <dt>Тып</dt>
-            <dd>Анімэ/25</dd>
-            <dt>Частак</dt>
-            <dd>26</dd>
-            <dt>Працягласць часткі</dt>
-            <dd>24 хв.</dd>
-            <dt>Статус</dt>
-            <dd><abbr title="С 6 октября 2012 г. по 6 апреля 2013 г.">Выйшла</abbr></dd>
-            <dt>Жанры</dt>
-            <dd>
-              <ul>
-                <li>Сёнан</li>
-                <li>Экшан</li>
-                <li>Прыгоды</li>
-                <li>Звышнатуральнае</li>
-                <li>Вампіры</li>
-              </ul>
-            </dd>
-            <dt>Узрост</dt>
-            <dd>
-              <abbr
-                title="Асобы, якія не дасягнулі 17-гадовага ўзросту, дапускаюцца на фільм толькі ў суправаджэнні аднаго з бацькоў, альбо законнага прадстаўніка"
-                >R-17</abbr
+            <dt>
+              <a href="https://shikimori.org/animes/14719-jojo-no-kimyou-na-bouken-tv"
+                >Shikimori</a
               >
-            </dd>
-            <dt>Альтэрнатыўныя назвы</dt>
-            <dd>
-              <ul>
-                <li>ジョジョの奇妙な冒険</li>
-                <li>JoJo's Bizarre Adventure</li>
-                <li>JoJo no Kimyou na Bouken (2012)</li>
-                <li>JoJo's Bizarre Adventure: The Animation, JoJo</li>
-              </ul>
-            </dd>
-            <dt>Студыя</dt>
-            <dd>David Production</dd>
-            <dt>У каталогах</dt>
-            <dd>
-              <dl>
-                <dt>
-                  <a href="https://shikimori.org/animes/14719-jojo-no-kimyou-na-bouken-tv"
-                    >Shikimori</a
-                  >
-                </dt>
-                <dd>7.92</dd>
-                <dt><a href="https://www.kinopoisk.ru/series/707636/">Кинопоиск</a></dt>
-                <dd>8.6</dd>
-                <dt><a href="https://myanimelist.net/anime/14719">MyAnimeList</a></dt>
-                <dd>7.91</dd>
-                <dt><a href="https://www.imdb.com/title/tt2359704/">IMDb</a></dt>
-                <dd>8.4</dd>
-              </dl>
-            </dd>
-            <dt>Афіцыйныя крыніцы</dt>
-            <dd>
-              <ul>
-                <li><a href="https://jojo-animation.com/fb_bt/">Сайт</a></li>
-                <li><a href="https://twitter.com/anime_jojo">Twitter</a></li>
-              </ul>
-            </dd>
+            </dt>
+            <dd>7.92</dd>
+            <dt><a href="https://www.kinopoisk.ru/series/707636/">Кинопоиск</a></dt>
+            <dd>8.6</dd>
+            <dt><a href="https://myanimelist.net/anime/14719">MyAnimeList</a></dt>
+            <dd>7.91</dd>
+            <dt><a href="https://www.imdb.com/title/tt2359704/">IMDb</a></dt>
+            <dd>8.4</dd>
           </dl>
-        </section>
-        <section>
-          <p>
-            Вялікабрытанія, XIX стагоддзе. Джонатан Джостар, ён жа ДжоДжо, шчасліва жыве ў
-            асабняку са сваім бацькам. І вось у яго сям'і здараецца папаўненне — бацька
-            сямейства Джордж Джостар ўсынаўляе дзіўнага хлопца па імю Дзіа Брандо. Джонатан рады
-            — у яго з'явіцца новы сябар. Аднак Дзіа зусім не настроены выяўляць прыязнасць. Ён
-            задумаў пазбавіцца ад адзінага спадчынніка Джостаров і займець увесь іх стан сябе.
-            Мала таго, што ён збіў Джостара-малодшага ў спарынгу па боксе, наладзіў яго сяброў
-            супраць Джонатана, так яшчэ і скраў першы пацалунак у яго дзяўчыны! Як быццам гэтага
-            мала, Дзіа спальвае ў печы любімую сабаку Джонатана — Дэні. Але горш за ўсё тое, што
-            Дзіа таксама не лыкам шыты — на людзях ён паводзіць сябе як узорны джэнтльмен. Тут
-            цярпенню ДжоДжо прыходзіць канец...
-          </p>
-        </section>
-      </article>
-      <iframe
-        src="https://drive.google.com/file/d/1Tce3wqB2JJN_Dw7j4UXlwFWqOyuGdhYf/preview"
-        allow="autoplay; fullscreen"
-      ></iframe>
+        </dd>
+        <dt>Афіцыйныя крыніцы</dt>
+        <dd>
+          <ul>
+            <li><a href="https://jojo-animation.com/fb_bt/">Сайт</a></li>
+            <li><a href="https://twitter.com/anime_jojo">Twitter</a></li>
+          </ul>
+        </dd>
+      </section>
+      <section id="description">
+        <p>
+          Вялікабрытанія, XIX стагоддзе. Джонатан Джостар, ён жа ДжоДжо, шчасліва жыве ў
+          асабняку са сваім бацькам. І вось у яго сям'і здараецца папаўненне — бацька сямейства
+          Джордж Джостар ўсынаўляе дзіўнага хлопца па імю Дзіа Брандо. Джонатан рады — у яго
+          з'явіцца новы сябар. Аднак Дзіа зусім не настроены выяўляць прыязнасць. Ён задумаў
+          пазбавіцца ад адзінага спадчынніка Джостаров і займець увесь іх стан сябе. Мала таго,
+          што ён збіў Джостара-малодшага ў спарынгу па боксе, наладзіў яго сяброў супраць
+          Джонатана, так яшчэ і скраў першы пацалунак у яго дзяўчыны! Як быццам гэтага мала,
+          Дзіа спальвае ў печы любімую сабаку Джонатана — Дэні. Але горш за ўсё тое, што Дзіа
+          таксама не лыкам шыты — на людзях ён паводзіць сябе як узорны джэнтльмен. Тут цярпенню
+          ДжоДжо прыходзіць канец...
+        </p>
+      </section>
     </main>
     <footer>
       <ul>
